Entrypoint should be enabled for linux.

--- a/usr/templates/console/dev/container/Dockerfile
+++ b/usr/templates/console/dev/container/Dockerfile
@@ -18,7 +18,7 @@ WORKDIR /work
 # entrypoint Setup
 COPY entrypoint.sh /opt/entrypoint.sh
 RUN chmod +x /opt/entrypoint.sh
-# ENTRYPOINT /opt/entrypoint.sh
+ENTRYPOINT /opt/entrypoint.sh
 
 
 # install clojure tools
